[gd_scene load_steps=6 format=3 uid="uid://b4tmstps088mq"]

[ext_resource type="Script" uid="uid://bm2gn0o5mni6r" path="res://user_interface/panels/event_log.gd" id="1_ncafh"]
[ext_resource type="Texture2D" uid="uid://cgu4gs0s0kk5y" path="res://icon.svg" id="2_qnekw"]
[ext_resource type="PackedScene" uid="uid://d3vqjusef64hp" path="res://objects/events/types/interaction/interaction_option.tscn" id="3_8uvv8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0odxb"]
bg_color = Color(0.145098, 0.145098, 0.14902, 1)
border_width_top = 4
border_width_right = 4
corner_radius_bottom_right = 45
corner_detail = 1
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncafh"]
draw_center = false
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)

[node name="EventLog" type="PanelContainer"]
custom_minimum_size = Vector2(300, 180)
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_0odxb")
script = ExtResource("1_ncafh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="EventCard" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ncafh")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/EventCard"]
layout_mode = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EventCard/MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/EventCard/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_qnekw")
expand_mode = 1
stretch_mode = 4

[node name="Text" type="RichTextLabel" parent="MarginContainer/VBoxContainer/EventCard/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
text = "I am a description of the curerent popup"

[node name="QuickActions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EventCard/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="Button" parent="MarginContainer/VBoxContainer/EventCard/MarginContainer/HBoxContainer/QuickActions" instance=ExtResource("3_8uvv8")]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_vertical = 3

[node name="LogContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ScrollContainer/LogContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
text = "Somthing happens..."
fit_content = true
